--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <div class="fs-field">
     <label class="fs-label" for="message">Message</label>
     <textarea class="fs-textarea" id="message" name="message"></textarea>
-    <p class="fs-description">We usually respond within 1-2 business days.</p>
+    <p class="fs-description">We respond within a few hours.</p>
   </div>
   <div class="fs-button-group">
     <button class="fs-button" type="submit">Send</button>
