--- a/index.html
+++ b/index.html
@@ -152,15 +152,16 @@
                     <div class="container">
                         <h1 class="Contact" id="con">Contact Me</h1>
                         <form
-  action="https://api.web3forms.com/submit"
+  action="mailto:editiq2003@gmail.com"
   class="fs-form"
   target="_top"
   method="POST"
+enctype="text/plain"
 >
-				<input type="hidden" name="Access key" value="7f93c454-bee0-4acc-ac5d-74f9a75c0ade">
+				
   <div class="fs-field">
     <label class="fs-label" for="name">Name</label>
-    <input class="fs-input" id="name" name="name" />
+    <input class="fs-input" id="name" name="name" required />
   </div>
   <div class="fs-field">
     <label class="fs-label" for="email">Email</label>
