--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="container">
                         <h1 class="Contact" id="con">Contact Me</h1>
                         <form
-  action="mailto:editiq2003@gmail.com"
+  action="https://formspree.io/f/xpwdzkrw"
   class="fs-form"
   target="_top"
   method="POST"
