--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   method="POST"
 enctype="text/plain"
 >
-				
+	<input type="hidden" name="_format" value="plain">			
   <div class="fs-field">
     <label class="fs-label" for="name">Name</label>
     <input class="fs-input" id="name" name="name" required />
