--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                             <!-- ST @Thumbnail (Finance)  -->
                             <div class="single-demo masonry_item portfolio-33-33 Finance">
-                                <a target="_blank" href="01-main-demo.html">
+                                <a target="_blank" href="#">
                                     <img src="images/Thumb/thumb-finance.jpg" alt="Finance Thumbnail">
                                 </a>
                             </div>
@@ -116,7 +116,7 @@
 
                             <!-- ST @Thumbnail (IRL+Podcast)  -->
                             <div class="single-demo masonry_item portfolio-33-33  IRL Podcast">
-                                <a target="_blank" href="01-main-demo.html">
+                                <a target="_blank" href="#">
                                     <img src="images/Thumb/thumb-podcast.jpg" alt="Podcast Thumbnail">
                                 </a>
                             </div>
@@ -124,19 +124,21 @@
 
                             <!-- ST @Thumbnail (IRL+Challenge)  -->
                             <div class="single-demo masonry_item portfolio-33-33  IRL">
-                                <a target="_blank" href="01-main-demo.html">
+                                <a target="_blank" href="#">
                                     <img src="images/Thumb/thumb-irl.jpg" alt="IRL Thumbnail">
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (IRL+Challenge)  -->
 
-                            <div class="single-demo masonry_item portfolio-33-33  IRL Luxury">
-                                <a target="__blank" href="01-main-demo.html">
-                                    <img src="images/Thumb/thumb-irl2.jpg" alt="IRL Thumbnail">
+                            
+
+                            <!-- ST @Thumbnail (podcast)  -->
+                            <div class="single-demo masonry_item portfolio-33-33  IRL">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/thumb-podcast2.jpg" alt="IRL Thumbnail">
                                 </a>
                             </div>
-                            <!--  EN @Thumbnail (IRL+Challenge)  -->
-
+                            <!--  EN @Thumbnail (podcast)  -->
 
 
 
