--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <!-- ST @Thumbnail (podcast)  -->
                             <div class="single-demo masonry_item portfolio-33-33  IRL">
                                 <a target="_blank" href="#">
-                                    <img src="images/Thumb/thumb-podcast2.jpg" alt="IRL Thumbnail">
+                                    <img src="images/Thumb/thumb-podcast2.jpg" alt="podcast">
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (podcast)  -->
@@ -145,7 +145,7 @@
           <!-- ------------------------------------------- -->
                         </div>
                     </div>
-                </div>
+                </div>a
                 <!-- End Home Demo  -->
 
 
