--- a/index.html
+++ b/index.html
@@ -130,12 +130,20 @@
                             </div>
                             <!--  EN @Thumbnail (IRL+Challenge)  -->
 
+                            <!-- ST @Thumbnail (IRL+Challenge)  -->
+                            <div class="single-demo masonry_item portfolio-33-33  IRL">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/thumb-irl2.jpg" alt="IRL Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (IRL+Challenge)  -->
+
                             
 
                             <!-- ST @Thumbnail (podcast)  -->
-                            <div class="single-demo masonry_item portfolio-33-33  IRL">
+                            <div class="single-demo masonry_item portfolio-33-33  Podcast">
                                 <a target="_blank" href="#">
-                                    <img src="images/Thumb/thumb-podcast2.jpg" alt="podcast">
+                                    <img src="images/Thumb/thumb-podcast2.jpg" alt="Podcast Thumbnail">
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (podcast)  -->
