--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             
 
                             <!-- ST @Thumbnail (podcast)  -->
-                            <div class="single-demo masonry_item portfolio-33-33  Podcast">
+                            <div class="single-demo masonry_item portfolio-33-33  Documentary">
                                 <a target="_blank" href="#">
                                     <img src="images/Thumb/thumb-podcast2.jpg" alt="Podcast Thumbnail">
                                 </a>
