--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <!-- ST @Thumbnail (podcast)  -->
                             <div class="single-demo masonry_item portfolio-33-33  Documentary">
                                 <a target="_blank" href="#">
-                                    <img src="images/Thumb/thumb-podcast2.jpg" alt="Podcast Thumbnail">
+                                    <img src="images/Thumb/thumb-podcast2.jpg" alt="Documentary Thumbnail">
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (podcast)  -->
