--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <!--  EN @Thumbnail (Finance)  -->
 
                             <!-- ST @Thumbnail (IRL+Podcast)  -->
-                            <div class="single-demo masonry_item portfolio-33-33  IRL Podcast">
+                            <div class="single-demo masonry_item portfolio-33-33  Documentary">
                                 <a target="_blank" href="#">
                                     <img src="images/Thumb/thumb-documentary1.jpg" alt="Podcast Thumbnail">
                                 </a>
