--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <!-- ST @Thumbnail (IRL+Podcast)  -->
                             <div class="single-demo masonry_item portfolio-33-33  Documentary">
                                 <a target="_blank" href="#">
-                                    <img src="images/Thumb/thumb-documentary1.jpg" alt="Podcast Thumbnail">
+                                    <img src="images/Thumb/thumb-documentary1.jpg" alt="Documentary Thumbnail">
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (IRL+Podcast)  -->
