--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
                             <!--  EN @Thumbnail (podcast)  -->
 
 
+                            <!-- ST @Thumbnail (gaming)  -->
+                            <div class="single-demo masonry_item portfolio-33-33  Gaming">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/thumb-gaming1.png" alt="Gaming Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (gaming)  -->
+
+
 
           <!-- ------------------------------------------- -->
                         </div>
