--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <!-- ST @Thumbnail (gaming)  -->
                             <div class="single-demo masonry_item portfolio-33-33  Gaming">
                                 <a target="_blank" href="#">
-                                    <img src="images/Thumb/thumb-gaming1.png" alt="Gaming Thumbnail">
+                                    <img src="images/Thumb/thumb-gaming1.jpg" alt="Gaming Thumbnail">
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (gaming)  -->
