--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
 
                             
 
-                            <!-- ST @Thumbnail (podcast)  -->
+                            <!-- ST @Thumbnail (Documentary)  -->
                             <div class="single-demo masonry_item portfolio-33-33  Documentary">
                                 <a target="_blank" href="#">
                                     <img src="images/Thumb/thumb-documentary2.jpg" alt="Documentary Thumbnail">
                                 </a>
                             </div>
-                            <!--  EN @Thumbnail (podcast)  -->
+                            <!--  EN @Thumbnail (Documentary)  -->
 
 
                             <!-- ST @Thumbnail (gaming)  -->
@@ -156,6 +156,15 @@
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (gaming)  -->
+
+
+                            <!-- ST @Thumbnail (Documentary)  -->
+                            <div class="single-demo masonry_item portfolio-33-33  Documentary">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/thumb-documentary3.jpg" alt="Documentary Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (Documentary)  -->
 
 
 
