--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             <!-- ST @Thumbnail (Documentary)  -->
                             <div class="single-demo masonry_item portfolio-33-33  Documentary">
                                 <a target="_blank" href="#">
-                                    <img src="images/Thumb/thumb-documentary3.jpg" alt="Documentary Thumbnail">
+                                    <img src="ima ges/Thumb/thumb-documentary3.jpg" alt="Documentary Thumbnail">
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (Documentary)  -->
@@ -225,7 +225,7 @@ enctype="text/plain"
                             <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                                 <div class="inner text-center">
                                     <ul class="social-share rn-lg-size d-flex justify-content-center liststyle">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="#"><svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M9.101 23.691v-7.98H6.627v-3.667h2.474v-1.58c0-4.085 1.848-5.978 5.858-5.978.401 0 .955.042 1.468.103a8.68 8.68 0 0 1 1.141.195v3.325a8.623 8.623 0 0 0-.653-.036 26.805 26.805 0 0 0-.733-.009c-.707 0-1.259.096-1.675.309a1.686 1.686 0 0 0-.679.622c-.258.42-.374.995-.374 1.752v1.297h3.919l-.386 2.103-.287 1.564h-3.246v8.245C19.396 23.238 24 18.179 24 12.044c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.628 3.874 10.35 9.101 11.647Z"/></svg></a></li>
                                         <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fab fa-skype"></i></a></li>
