--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <!-- ST @Thumbnail (Documentary)  -->
                             <div class="single-demo masonry_item portfolio-33-33  Documentary">
                                 <a target="_blank" href="#">
-                                    <img src="ima ges/Thumb/thumb-documentary3.jpg" alt="Documentary Thumbnail">
+                                    <img src="images/Thumb/thumb-documentary3.jpg" alt="Documentary Thumbnail">
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (Documentary)  -->
