--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ enctype="text/plain"
                                 <div class="inner text-center">
                                     <ul class="social-share rn-lg-size d-flex justify-content-center liststyle">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                        <li><a href="https://www.instagram.com/editiq2003?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a></li>
                                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                                         <li><a href="#"><i class="fab fa-behance"></i></a></li>
                                     </ul>
