--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 
                 <div class="contact-client-section">
-                    
+
                     <!-- Contact Form -->
                     <div class="contact-box">
                       <h2 class="text-color">Contact Me</h2>
@@ -205,7 +205,7 @@
                           
                           <div class="client-card">
                             <div class="client-img">
-                              <img src="images/clinets/client1.png" alt="Client 1" />
+                              <img src="images/clients/client1.png" alt="Client 1" />
                             </div>
                             <h4>Funded Brothers</h4>
                             <p>"Amazing work!"</p>
