--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <input type="email" name="email" required class="c-email" />
                         <label class="text-color">Message</label>
                         <textarea name="message" rows="5" required class="c-input"></textarea>
-                        <button type="submit">Contact Me</button>
+                        <button type="submit">Send</button>
                       </form>
                     </div>
                   
