--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                     </div>
                                     <p class="title">Welcome to EditIQ , Make your Designs</p>
                                     <div class="purshase-btn">
-                                        <a href="#con" class="rn-button-style--2 btn_solid">Contact Me</a>
+                                        <a href="#contact" class="rn-button-style--2 btn_solid">Contact Me</a>
                                         <a href="#demo" class="rn-button-style--2 btn_border btn_border--dark smoth-animation">View
                                             Design</a>
                                     </div>
@@ -177,7 +177,7 @@
                 <!-- End Home Demo  -->
 
 
-                <div class="contact-client-section">
+                <div class="contact-client-section" id="contact">
 
                     <!-- Contact Form -->
                     <div class="contact-box">
