--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
                 <!-- End Home Demo  -->
 
 
-                <div class="contact-client-section" id="contact">
+                <div class="contact-client-section" >
 
                     <!-- Contact Form -->
                     <div class="contact-box">
-                      <h2 class="text-color">Contact Me</h2>
+                      <h2 class="text-color" id="contact">Contact Me</h2>
                       <form action="https://api.web3forms.com/submit" method="POST">
                         <input type="hidden" name="access_key" value="7f93c454-bee0-4acc-ac5d-74f9a75c0ade" />
                         <label class="text-color">Name</label>
