--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
                                 <button data-filter=".IRL"><span class="filter-text">IRL</span></button>
                                 <!-- 10 -->
                                 <button data-filter=".Documentary"><span class="filter-text">Documentary</span></button>
+                                <!-- 11 -->
+                                <button data-filter=".Fitness"><span class="filter-text">Fitness</span></button>
                             </div>
 
                         </div>
