--- a/index.html
+++ b/index.html
@@ -199,6 +199,14 @@
                             </div>
                             <!--  EN @Thumbnail (IRL+Podcast)  -->
 
+                            <!-- ST @Thumbnail (Fitness)  -->
+                            <div class="single-demo masonry_item portfolio-33-33  Fitness">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/thumb-documentary1.jpg" alt="Fitness Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (Fitness)  -->
+
 
 
           <!-- ------------------------------------------- -->
