--- a/index.html
+++ b/index.html
@@ -207,6 +207,24 @@
                             </div>
                             <!--  EN @Thumbnail (Fitness)  -->
 
+                             <!-- ST @Thumbnail (gaming)  -->
+                             <div class="single-demo masonry_item portfolio-33-33  Gaming">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/thumb-gmaing2.png" alt="Gaming Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (gaming)  -->
+
+
+                             <!-- ST @Thumbnail (gaming)  -->
+                             <div class="single-demo masonry_item portfolio-33-33  Gaming">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/thumb-gaming 3.png" alt="Gaming Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (gaming)  -->
+
+
 
 
           <!-- ------------------------------------------- -->
