--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                              <!-- ST @Thumbnail (gaming)  -->
                              <div class="single-demo masonry_item portfolio-33-33  Gaming">
                                 <a target="_blank" href="#">
-                                    <img src="images/Thumb/thumb-gaming 3.png" alt="Gaming Thumbnail">
+                                    <img src="images/Thumb/thumb-gaming3.png" alt="Gaming Thumbnail">
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (gaming)  -->
