--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                               <img src="images/clients/client2.jpg" alt="Client 1" />
                             </div>
                             <h4>Fantastic Preeti</h4>
-                            <p>"Aap mast thumbnail designer ho, no doubt!"</p>
+                            <p>"Aap mast thumbnail designer <br> ho, no doubt!"</p>
                           </div>
                           
                           
