--- a/index.html
+++ b/index.html
@@ -223,7 +223,15 @@
                                 </a>
                             </div>
                             <!--  EN @Thumbnail (gaming)  -->
+                             
 
+                            <!-- ST @Thumbnail (gaming)  -->
+                             <div class="single-demo masonry_item portfolio-33-33  Finance">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/thumb-finance3.png" alt="Finance Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (gaming)  -->
 
 
 
