--- a/index.html
+++ b/index.html
@@ -233,6 +233,15 @@
                             </div>
                             <!--  EN @Thumbnail (gaming)  -->
 
+                            <!-- ST @Thumbnail (Vlog)  -->
+                             <div class="single-demo masonry_item portfolio-33-33  Vlog">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/Thumb-vlog.png" alt="Vlog Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (Vlog)  -->
+
+
 
 
           <!-- ------------------------------------------- -->
