--- a/index.html
+++ b/index.html
@@ -241,13 +241,29 @@
                             </div>
                             <!--  EN @Thumbnail (Vlog)  -->
 
-                            <!-- ST @Thumbnail (Vlog)  -->
-                             <div class="single-demo masonry_item portfolio-33-33  Vlog">
+                            <!-- ST @Thumbnail (IRL)  -->
+                             <div class="single-demo masonry_item portfolio-33-33  IRL">
                                 <a target="_blank" href="#">
-                                    <img src="images/Thumb/thumb-irl.png" alt="Vlog Thumbnail">
+                                    <img src="images/Thumb/thumb-irl.png" alt="IRL Thumbnail">
                                 </a>
                             </div>
-                            <!--  EN @Thumbnail (Vlog)  -->
+                            <!--  EN @Thumbnail (IRL)  -->
+
+                            <!-- ST @Thumbnail (Gaming)  -->
+                             <div class="single-demo masonry_item portfolio-33-33  IRL">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/thumb-irl.png" alt="IRL Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (Gaming)  -->
+
+                             <!-- ST @Thumbnail (Gaming)  -->
+                             <div class="single-demo masonry_item portfolio-33-33  Gaming">
+                                <a target="_blank" href="#">
+                                    <img src="images/Thumb/Thumb-gaming10.jpg" alt="Gaming Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (Gaming)  -->
 
 
 
