--- a/index.html
+++ b/index.html
@@ -258,6 +258,58 @@
                             <!--  EN @Thumbnail (Gaming)  -->
 
 
+                            <!-- ST @Thumbnail (Gaming)  -->
+<div class="single-demo masonry_item portfolio-33-33 Gaming">
+    <a target="_blank" href="#">
+        <img src="images/Thumb/Thumbnail-gaming (1).jpg" alt="Gaming Thumbnail">
+    </a>
+</div>
+
+<div class="single-demo masonry_item portfolio-33-33 Gaming">
+    <a target="_blank" href="#">
+        <img src="images/Thumb/Thumbnail-gaming (2).jpg" alt="Gaming Thumbnail">
+    </a>
+</div>
+
+<div class="single-demo masonry_item portfolio-33-33 Gaming">
+    <a target="_blank" href="#">
+        <img src="images/Thumb/Thumbnail-gaming (3).jpg" alt="Gaming Thumbnail">
+    </a>
+</div>
+
+<div class="single-demo masonry_item portfolio-33-33 Gaming">
+    <a target="_blank" href="#">
+        <img src="images/Thumb/Thumbnail-gaming (4).jpg" alt="Gaming Thumbnail">
+    </a>
+</div>
+
+<div class="single-demo masonry_item portfolio-33-33 Gaming">
+    <a target="_blank" href="#">
+        <img src="images/Thumb/Thumbnail-gaming (5).jpg" alt="Gaming Thumbnail">
+    </a>
+</div>
+
+<div class="single-demo masonry_item portfolio-33-33 Gaming">
+    <a target="_blank" href="#">
+        <img src="images/Thumb/Thumbnail-gaming (6).jpg" alt="Gaming Thumbnail">
+    </a>
+</div>
+
+<div class="single-demo masonry_item portfolio-33-33 Gaming">
+    <a target="_blank" href="#">
+        <img src="images/Thumb/Thumbnail-gaming (7).jpg" alt="Gaming Thumbnail">
+    </a>
+</div>
+
+<div class="single-demo masonry_item portfolio-33-33 Gaming">
+    <a target="_blank" href="#">
+        <img src="images/Thumb/Thumbnail-gaming (8).jpg" alt="Gaming Thumbnail">
+    </a>
+</div>
+<!-- EN @Thumbnail (Gaming)  -->
+
+
+
 
 
           <!-- ------------------------------------------- -->
@@ -397,7 +449,7 @@
                             <div class="col-lg-4 col-md-12 col-sm-12 col-12">
                                 <div class="inner text-lg-end text-center mt_md--20 mt_sm--20">
                                     <div class="text">
-                                        <p>Copyright © 2025 EditIQ. All Rights Reserved.</p>
+                                        <p>Copyright © 2025 A. All Rights Reserved.</p>
                                     </div>
                                 </div>
                             </div>
