--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             <!-- ST @Thumbnail (Gaming)  -->
 <div class="single-demo masonry_item portfolio-33-33 Gaming">
     <a target="_blank" href="#">
-        <img src="images/Thumb/Thumbnail-gaming (1).jpg" alt="Gaming Thumbnail">
+        <img src="images/Thumb/Thumbnail-gaming (1).jpeg" alt="Gaming Thumbnail">
     </a>
 </div>
 
