--- a/index.html
+++ b/index.html
@@ -306,6 +306,12 @@
         <img src="images/Thumb/Thumbnail-gaming (8).jpg" alt="Gaming Thumbnail">
     </a>
 </div>
+
+<div class="single-demo masonry_item portfolio-33-33 Gaming">
+    <a target="_blank" href="#">
+        <img src="images/Thumb/Thumbnail-gaming (9).jpg" alt="Gaming Thumbnail">
+    </a>
+</div>
 <!-- EN @Thumbnail (Gaming)  -->
 
 
