--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
 <div class="single-demo masonry_item portfolio-33-33 Gaming">
     <a target="_blank" href="#">
-        <img src="images/Thumb/Thumbnail-gaming (11).jpg" alt="Gaming Thumbnail">
+        <img src="images/Thumb/Thumbnail-gaming (11).png" alt="Gaming Thumbnail">
     </a>
 </div>
 <!-- EN @Thumbnail (Gaming)  -->
