--- a/index.html
+++ b/index.html
@@ -326,6 +326,14 @@
 </div>
 <!-- EN @Thumbnail (Gaming)  -->
 
+ <!-- ST @Thumbnail (Gaming)  -->
+                             <div class="single-demo masonry_item portfolio-33-33  Gaming">
+                                <a target="_blank" href="#">
+                                    <img src="https://res.cloudinary.com/duvswaqcv/image/upload/v1757539264/smayan_bhai_banner_clglls.jpg" alt="Gaming Thumbnail">
+                                </a>
+                            </div>
+                            <!--  EN @Thumbnail (Gaming)  -->
+
 
 
 
