--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                                         </a>
                                     </div>
                                     <p class="title">Welcome to EditIQ , Make your Designs</p>
+                                    <a href="Invoice.html"<p class="title">Invoice</p>
                                     <div class="purshase-btn">
                                         <button onclick="scrollToContact()" class="rn-button-style--2 btn_solid">Contact Me</button>
 
