--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                         </a>
                                     </div>
                                     <p class="title">Welcome to EditIQ , Make your Designs</p>
-                                    <a href="Invoice.html"<p class="title">Invoice</p>
+                                    <a href="Invoice.html"> <p class="title" style= "font-size:5px;" >Invoice</p> </a> 
                                     <div class="purshase-btn">
                                         <button onclick="scrollToContact()" class="rn-button-style--2 btn_solid">Contact Me</button>
 
