--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                                             <img src="images/logo-all-dark3.png" alt="Trydo Images">
                                         </a>
                                     </div>
-                                    <p class="title">Welcome to EditIQ , Make your Designs</p>
-                                    <a href="Invoice.html"> <p class="title" style= "font-size:5px;" >Invoice</p> </a> 
+                                    <p class="title">Welcome to EditIQ , Make your Designs<a href="Invoice.html">invoice</a></p>
+                                    
                                     <div class="purshase-btn">
                                         <button onclick="scrollToContact()" class="rn-button-style--2 btn_solid">Contact Me</button>
 
