--- a/Invoice.html
+++ b/Invoice.html
@@ -436,9 +436,9 @@
         </section>
 
         <footer class="inv-foot">
-          <div class="thanks">Thank you for your business!</div>
+          <div class="thanks">Thank you</div>
           <div class="foot-actions no-print">
-            <button type="button" class="btn" id="downloadJsonBtn">Download JSON</button>
+            <!-- <button type="button" class="btn" id="downloadJsonBtn">Download JSON</button> -->
             <button type="button" class="btn primary" id="printBtn">Print Invoice</button>
           </div>
         </footer>
